@@ -1370,7 +1370,7 @@ cifframe_callback(ffi_cif *cif, void *retp, void **args, void *user)
   [super dealloc];
 }
 
-- (void) observeValueForKeyPath: (NSString *)keyPath
+- (void) oberveValueForKeyPath: (NSString *)keyPath
                        ofObject: (id)anObject
                          change: (NSDictionary *)change
                         context: (void *)context
@@ -1533,10 +1533,8 @@ cifframe_callback(ffi_cif *cif, void *retp, void **args, void *user)
 - (void) removeObserver: (NSObject*)anObserver forKeyPath: (NSString*)aPath
 {
   GSKVOInfo	*info;
-  id forwarder;
+  id            forwarder;
 
-  setup();
-  [kvoLock lock];
   /*
    * Get the observation information and remove this observation.
    */
@@ -1553,7 +1551,6 @@ cifframe_callback(ffi_cif *cif, void *retp, void **args, void *user)
       IF_NO_GC(AUTORELEASE(info);)
       [self setObservationInfo: nil];
     }
-  [kvoLock unlock];
   if ([aPath rangeOfString:@"."].location != NSNotFound)
     [forwarder finalize];
 }
